--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Personal Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -27,7 +27,7 @@
         <h1 class="title">Personal Portfolio</h1>
 
         <div class="profile-card">
-            <img src="C:\Users\Admin\Documents\Personal Poftfolio\images\Photo of me.jpg" alt="Profile Picture">
+            <img src="images/Photo of me.jpg" alt="Profile Picture">
         </div>
 
         <div class="contact">
